--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <commons-pool2.version>2.3</commons-pool2.version>
     <commons-pool.version>1.6</commons-pool.version>
     <jedis.version>2.9.0</jedis.version>
-    <netty_version>4.0.35.Final</netty_version>
+    <netty.version>4.0.35.Final</netty.version>
     <hibernateValidator.version>5.1.0.Final</hibernateValidator.version>
     <javax.validation.version>1.1.0.Final</javax.validation.version>
     <zk.version>3.4.9</zk.version>
@@ -56,7 +56,6 @@
     <commons-codec.version>1.10</commons-codec.version>
     <zxing.version>3.2.1</zxing.version>
     <signatureUtil.version>1.0.0</signatureUtil.version>
-    <massy.version>0.1.8</massy.version>
     <shiro.version>1.4.0</shiro.version>
     <net.mingsoft.version>0.1</net.mingsoft.version>
     <jxls-core.version>1.0.5</jxls-core.version>
@@ -441,6 +440,7 @@
         <artifactId>netty-all</artifactId>
         <version>${netty.version}</version>
       </dependency>
+
       <!--数据验证-->
       <dependency>
         <groupId>javax.validation</groupId>
@@ -617,30 +617,30 @@
     </pluginManagement>
   </build>
   <repositories>
-    <!--<repository>-->
-      <!--<id>nexus</id>-->
-      <!--<name>nexus</name>-->
-      <!--<url>http://172.16.94.124:8081/nexus/content/groups/public/</url>-->
-    <!--</repository>-->
-    <!--<repository>-->
-      <!--<id>alimaven</id>-->
-      <!--<name>aliyun maven</name>-->
-      <!--<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
-    <!--</repository>-->
+    <repository>
+      <id>nexus</id>
+      <name>nexus</name>
+      <url>http://172.16.94.124:8081/nexus/content/groups/public/</url>
+    </repository>
+    <repository>
+      <id>alimaven</id>
+      <name>aliyun maven</name>
+      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+    </repository>
 
   </repositories>
 
   <pluginRepositories>
-    <!--<pluginRepository>-->
-      <!--<id>nexus</id>-->
-      <!--<name>nexus</name>-->
-      <!--<url>http://172.16.94.124:8081/nexus/content/groups/public/</url>-->
-    <!--</pluginRepository>-->
-    <!--<pluginRepository>-->
-      <!--<id>alimaven</id>-->
-      <!--<name>aliyun maven</name>-->
-      <!--<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
-    <!--</pluginRepository>-->
+    <pluginRepository>
+      <id>nexus</id>
+      <name>nexus</name>
+      <url>http://172.16.94.124:8081/nexus/content/groups/public/</url>
+    </pluginRepository>
+    <pluginRepository>
+      <id>alimaven</id>
+      <name>aliyun maven</name>
+      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+    </pluginRepository>
   </pluginRepositories>
 
   <!--<distributionManagement>-->
