1、添加通用异常 2、增加mq操作封装

--- a/commons/commons-mqoper/commons-mqoper-api/pom.xml
+++ b/commons/commons-mqoper/commons-mqoper-api/pom.xml
@@ -11,5 +11,14 @@
     <packaging>jar</packaging>
     <artifactId>commons-mqoper-api</artifactId>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.andrewliu.payplatform</groupId>
+                <artifactId>commons-exceptions</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
