--- a/commons/commons-mqoper/pom.xml
+++ b/commons/commons-mqoper/pom.xml
@@ -9,6 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+
+    <properties>
+        <slf4j-api.version>1.7.16</slf4j-api.version>
+        <logback.version>1.0.13</logback.version>
+        <log4j.version>1.2.17</log4j.version>
+        <log4j-core.version>2.7</log4j-core.version>
+        <log4j-slf4j-impl.version>2.7</log4j-slf4j-impl.version>
+    </properties>
+
     <modules>
         <module>commons-mqoper-rocketmq</module>
         <module>commons-mqoper-kafkamq</module>
